--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -6,6 +6,8 @@ html {
     font-family: 'Open Sans';
     color: white;
     min-height: 100%;
+    background: -webkit-linear-gradient(135deg, red, blue);
+    background: linear-gradient(135deg, red, blue);
   }
 
   body.landing {
