--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -4,10 +4,9 @@ html {
 body {
   font-family: 'Open Sans';
   color: white;
-  min-height: 100%; 
-  background: -webkit-radial-gradient(  #2b1339, #380c77);
-  background: radial-gradient(   #2b1339, #380c77);
-}
+  min-height: 100%;
+  background: -webkit-linear-gradient(135deg, #ff0000, #0000ff);
+  background: linear-gradient(135deg, #ff0000, #0000ff); }
 
 body.landing {
   background: #5b5579; }
