--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -6,8 +6,8 @@ html {
     font-family: 'Open Sans';
     color: white;
     min-height: 100%;
-    background: -webkit-linear-gradient(135deg, red, blue);
-    background: linear-gradient(135deg, red, blue);
+    background: -webkit-linear-gradient(135deg, red, blue); //-webkit-radial-gradient(  #2b1339, #380c77);
+    background: linear-gradient(135deg, red, blue); //radial-gradient(   #2b1339, #380c77);
   }
 
   body.landing {
@@ -103,3 +103,26 @@ html {
    padding: 20px;
    border-top: 1px solid rgba(255, 255, 255, .4);
  }
+
+ .collection-album-container {
+     margin-top: 30px;
+     margin-bottom: 20px;
+  }
+  .collection-album-container .caption {
+     margin-top: 10px;
+  }
+  .collection-album-container .caption p {
+     font-size: 16px;
+     font-weight: 300;
+     color: rgba(255, 255, 255, 0.6);
+  }
+  .collection-album-container .caption p a {
+    color: rgba(255, 255, 255, 0.6);
+  }
+  .collection-album-container .caption p a.album-name {
+    color: white;
+  }
+ 
+  .collection-album-container img {
+    max-width: 100%;
+  }
