--- a/app/assets/templates/directives/slider.html
+++ b/app/assets/templates/directives/slider.html
@@ -1,6 +1,6 @@
-<div class='slider'>
-   <div class='fill'></div>
-   <div class='thumb'></div>
+<div class='slider' ng-click='onClickSlider($event)'>
+   <div class='fill' ng-style='fillStyle()'></div>
+   <div class='thumb' ng-style='thumbStyle()' ng-mousedown='trackThumb()'></div>
  </div>
 
  
